[project]
name = "clustering-project"
version = "0.1.0"
description = "A clustering and ranking system for itemset analysis with LLM-powered summarization capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.74.0.post1",
    "matplotlib>=3.10.3",
    "mlxtend>=0.23.4",
    "networkx>=3.4.2",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cluster_rank_summarize"]
